correcion about me

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h3>Un gusto conocerte,</h3>
 		<p>Soy una UX Designer autodidácta, me apasiona diseñar interfaces intuitivas. 
 		<br> Trabaje como community manager y me di cuenta que siempre me enfocaba en dos preguntas: 
-		¿Qué quiere el usuario?¿Porque?
+		¿Qué quiere el usuario?¿Porque?, por eso decidi cambiar de rumbo y enfocarme en el mundo tech.
 		<br>Cuando no estoy en mi rol de UX me encuentras leyendo novelas de mundo utopicos, viendo series criminales  o escuchando rock de los 80.
 		</p>
 
