--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
 </head>
 
 <body>
-	<h1>Hola, me llamo Solange</h1>
-	<h3>Un gusto conocerte,</h3>
-	<p>Soy una UX Designer autodidácta, me apasiona diseñar interfaces intuitivas.
-		<br> Trabaje como community manager y me di cuenta que siempre me enfocaba en dos preguntas:
-		¿Qué quiere el usuario?¿Porque?, por eso decidi cambiar de rumbo y enfocarme en el mundo UX.
-		<br>Cuando no estoy en mi rol de UX me encuentras leyendo novelas de mundo utopicos, viendo series criminales o
-		escuchando rock de los 80.
-	</p>
-
-	<h4>Fun facts</h4>
+	<div class="ui grid">
+		<div class="four wide column">
+			<img class="ui medium circular image" src="src/img/Solange Lavarello.JPG">
+		</div>
+		<div class="nine wide column">
+			<h1>Hola, me llamo Solange</h1>
+			<h3>Un gusto conocerte,</h3>
+			<p>Soy una UX Designer autodidácta que le apasiona diseñar interfaces intuitivas.
+				<br> Trabaje como community manager y me di cuenta que siempre terminaba enfocandome en dos preguntas:
+				¿Qué quiere el usuario? y ¿Porque?, por eso decidí cambiar de rumbo y enfocarme en el mundo UX.
+			</p>
+			<h4>Fun facts</h4>
 	<ul>
 		<li>Me encanta el chocolate</li>
+		<li>Me gusta las novelas con tema de mundo utópico</li>
 		<li>Tomo mucho café</li>
 		<li>Me gusta ver competencias o programas de cocina(pero no cocino)</li>
 		<li>Tengo dos perros y un gato que son mis bebes</li>
@@ -59,6 +62,10 @@
 		<li>React Native</li>
 		<li>Frameworks ( Materilize, Semantic-UI</li>
 	</ul>
+		</div>
+	</div>
+
+	
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 	 crossorigin="anonymous"></script>
 	<script src="semantic/dist/semantic.min.js"></script>
